--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,7 +10,7 @@
   <div class="card">
     <div class="card-body">       
       <h5 class="card-title">
-        <a href="/users/{{user.id}}/recipes/{{id}}" class = "js-user-recipe-link">{{title}}</a>
+        <a href="/users/{{user.id}}/recipes/{{id}}" class = "js-user-recipe-link" data-recipe-id="{{id}}">{{title}}</a>
       </h5>
        <div class="category-tag">
         {{#categories}}
