--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -20,6 +20,7 @@
         {{/categories}}
        </div>
       <h6 class="card-subtitle mb-2 text-muted">Submitted by 
+        <!-- To Do -> remove link from user index page -->
         <a href="/users/{{user.id}}/recipes/" class = "js-user-link">{{user.name}}</a> 
       </h6>
       <em>Approximate Cook Time: {{time}} Min</em><br>
