--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title"><%= link_to recipe.title, user_recipe_path(recipe.user, recipe), :class => 'js-user-recipe-link', :data=> {:recipe_id => recipe.id} %></h5>
+    <h5 class="card-title"><%= link_to recipe.title, user_recipe_path(recipe.user, recipe), :class => 'js-user-recipe-link', :data=> {:'recipe-id' => recipe.id} %></h5>
      <div class="category-tag">
       <%= render :partial => "categories/categories", :collection => recipe.categories, :as => :category %>
     </div>
