add button for new ingredient

--- a/app/views/ingredients/_ingredient.html.erb
+++ b/app/views/ingredients/_ingredient.html.erb
@@ -11,5 +11,12 @@
       </li>
     </p>
   <% end %>
+  <strong>
+    <a href="#" id="js-add-ingredient" name="add-link" %>+</a>
+  <strong>    
+    <label for="add-link">Add Ingredient</label>
+    
+    
+   
 </div>
 
