--- a/app/views/ingredients/_ingredient.html.erb
+++ b/app/views/ingredients/_ingredient.html.erb
@@ -1,16 +1,16 @@
-<div>
+<div id="js-ingredients">
   <%= f.fields_for :ingredients, recipe_new_or_edit(recipe) do |ingredients_fields| %>
     <p>
       <li>
-        <%= ingredients_fields.text_field :name, placeholder: "Ingredient Name" %>  -  
+        <%= ingredients_fields.text_field :name, placeholder: "Ingredient Name" %>
         <%= ingredients_fields.fields_for :recipe_ingredients, recipe_ingredient_new_or_edit(recipe, ingredients_fields.object) do |recipe_ingredient| %>
-          <%= recipe_ingredient.text_field :quantity, :placeholder => "Quantity" %>  -  
-          <%= recipe_ingredient.text_field :preparation, :placeholder => "Preparation" %>
-          <%= remove_recipe_ingredient(recipe_ingredient.object) %> 
+          <%= recipe_ingredient.text_field :quantity, :placeholder => "Quantity" %>
+          <%= recipe_ingredient.text_field :preparation, :placeholder => "Preparation" %>          <%= remove_recipe_ingredient(recipe_ingredient.object) %> 
         <% end %>
       </li>
     </p>
   <% end %>
+</div>
   <strong>
     <a href="#" id="js-add-ingredient" name="add-link" %>+</a>
   <strong>    
@@ -18,5 +18,5 @@
     
     
    
-</div>
+
 
