--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#recipe_cards {
+#recipe-cards {
   display: flex;
   flex-flow: row wrap;
   align-content: flex-start;
