--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -18,13 +18,12 @@
   <p id="js-directions"> <%= @recipe.directions %></p>
 </div>
 
-  <div class="d-flex justify-content-around">
-    <%= link_to "Add Comment", "#", id: "add-comment", data:{recipe_id: @recipe.id}%>
-    <%= link_to "Show Comments", "#", id: "show-comments", data:{recipe_id: @recipe.id}%>
+<div class="d-flex justify-content-between">
+    
+  <%= link_to "Show Comments", "#", id: "show-comments", data:{recipe_id: @recipe.id}%>
     <%= show_edit_link %> <br>
-  </div>
-  <div id="comments"></div>
 </div>
+  <div id="comments"></div>
 
 <script id="recipe-show-template" type="text/x-handlebars-template">
   <header>
