import comment stylesheet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,8 @@ $enable-flex: true;
 @import "bootstrap";
 @import "nav";
 @import "recipe";
+@import "comment";
+
 
 body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
