--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
     <%= f.text_field :name ,:value => (@user.errors.full_messages_for(:name).first || @user.name), :html =>{:class => " form-control field_with_errors" },  :placeholder => "Enter Your Name", :size => 30 %>
   </div>
   <div class="form-group">
-    <%= f.text_field :password, :value => @user.errors.full_messages_for(:password).first, :html => {:class => " form-control field_with_errors"}, :placeholder => "Enter Your Password", :size => 30 %>
+    <%= f.password_field :password, :value => @user.errors.full_messages_for(:password).first, :html => {:class => " form-control field_with_errors"}, :placeholder => "Enter Your Password", :size => 30 %>
   </div>
   <%= f.submit "Create Your Account" %>
   
