--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -15,13 +15,13 @@
        <div class="category-tag">
         {{#categories}}
         <span class="category-tag">
-          {{name}}
+          {{username}}
         </span>  
         {{/categories}}
        </div>
       <h6 class="card-subtitle mb-2 text-muted">Submitted by 
         <!-- To Do -> remove link from user index page -->
-        <a href="/users/{{user.id}}/recipes/" class = "js-user-link">{{user.name}}</a> 
+        <a href="/users/{{user.id}}/recipes/" class = "js-user-link">{{user.username}}</a> 
       </h6>
       <em>Approximate Cook Time: {{time}} Min</em><br>
       {{description}}
