--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,7 +5,7 @@
   </header>
   <h1 id="js-recipe-title" data-recipe-id="<%= @recipe.id %>" ><%= @recipe.title %></h1> 
   <h6 class="mb-2 text-muted" id="js-user" data-user-id="<%=@recipe.user.id%>">
-    Submitted by <%= link_to @recipe.user.name, user_recipes_path(@recipe.user), id: "js-user-link" %>
+    Submitted by <%= link_to @recipe.user.username, user_recipes_path(@recipe.user), id: "js-user-link" %>
   </h6>
   <p> Approximate Cook Time:  <span id="js-cook-time"><%= @recipe.time %></span>  Min </p>
   <p id="js-description"><em> <%= @recipe.description %></em></p>
@@ -30,7 +30,7 @@
   <h1 id="js-recipe-title" data-recipe-id="{{recipe.id}}">{{recipe.title}}</h1> 
   
   <h6 class="mb-2 text-muted" id="js-user" data-user-id="{{recipe.user.id}}">Submitted by 
-    <a href="/users/{{recipe.user.id}}/recipes" id="js-user-link">{{recipe.user.name}}</a>
+    <a href="/users/{{recipe.user.id}}/recipes" id="js-user-link">{{recipe.user.username}}</a>
   </h6>
   <p> Approximate Cook Time: {{recipe.time}}  Min </p>
   <p id="js-description"><em> {{recipe.description}}</em></p>
