--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_for @user do |f| %>
   <div class="form-group">
-    <%= f.text_field :name ,:value => (@user.errors.full_messages_for(:name).first || @user.name), :html =>{:class => " form-control field_with_errors" },  :placeholder => "Enter Your Name", :size => 30 %>
+    <%= f.email_field :email ,:value => (@user.errors.full_messages_for(:name).first || @user.name), :html =>{:class => " form-control field_with_errors" },  :placeholder => "Enter Your Email", :size => 30 %>
   </div>
   <div class="form-group">
     <%= f.password_field :password, :value => @user.errors.full_messages_for(:password).first, :html => {:class => " form-control field_with_errors"}, :placeholder => "Enter Your Password", :size => 30 %>
